--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,18 +1,18 @@
 site_name: MARS
-theme:
-  name: material
-  logo: img/logo-no-text.png
-  favicon: img/favicon.ico
+
 site_url: https://marstmu.com/
 site_description: Project documentation with Markdown.
 site_author: Zeul
 repo_url: https://github.com/zeulewan/test
 edit_uri: blob/master/docs/
 
-nav:
-  - Avionics Guide:
-    - Overview: avionics-guide/overview.md
-    - Flight Computer: avionics-guide/flight-computer.md
-    - Ground Station: avionics-guide/ground-station.md
+theme:
+  name: material
+  logo: img/logo-no-text.png
+  favicon: img/favicon.ico
+  features:
+    - navigation.sections
+    - navigation.tabs
+
 extra_css:
   - css/extra.css
