--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,12 +7,17 @@ repo_url: https://github.com/zeulewan/test
 edit_uri: blob/master/docs/
 
 theme:
+  icon:
+    repo: fontawesome/brands/github
   name: material
   logo: img/logo-no-text.png
   favicon: img/favicon.ico
   features:
     - navigation.sections
     - navigation.tabs
+
+plugins:
+  - blog
 
 extra_css:
   - css/extra.css
