add images and text

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,13 @@ plugins:
 
 markdown_extensions:
   - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+
   - md_in_html
+  - tables
+
 
   - pymdownx.highlight:
       anchor_linenums: true
