--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,8 @@ repo_url: https://github.com/zeulewan/marswebsite
 edit_uri: blob/master/docs/
 
 theme:
-
+  name: material
+  #custom_dir: overrides
   palette:
     # Palette toggle for automatic mode
     - media: "(prefers-color-scheme)"
@@ -33,7 +34,6 @@ theme:
         name: Switch to system preference
   icon:
     repo: fontawesome/brands/github
-  name: material
   logo: img/logo-no-text.png
   favicon: img/favicon.ico
   features:
