--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ theme:
     - navigation.sections
     - navigation.top
     - navigation.tabs
+    - navigation.tabs.sticky
     - search.suggest
     - navigation.instant
     - content.action.edit
