Add Nathanael as contributor

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -9,3 +9,8 @@ authors:
     description: Creator
     avatar: https://avatars.githubusercontent.com/u/145951024
     url: https://github.com/nikolaisydorenko 
+  Nate:
+    name: Nathanael H
+    description: Helper
+    avatar: https://avatars.githubusercontent.com/u/128150666
+    url: https://github.com/Nathanael-e-h
