--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,8 @@ theme:
     - navigation.indexes
     - toc.follow
 plugins:
+  - git-revision-date-localized:
+      enable_creation_date: true
   - git-committers:
       repository: zeulewan/marswebsite
       branch: main
