edit lat updated extension, update author roll, create status tab

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -1,12 +1,12 @@
 authors:
   zeul:
     name: Zeul Mordasiewicz
-    description: Creator
+    description: Helper
     avatar: https://avatars.githubusercontent.com/u/55005377
     url: https://github.com/zeulewan
   kolya:
     name: Nikolai
-    description: Creator
+    description: Helper
     avatar: https://avatars.githubusercontent.com/u/145951024
     url: https://github.com/nikolaisydorenko 
   Nate:
