--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,7 +49,8 @@ theme:
     - toc.follow
 plugins:
   - git-revision-date-localized:
-      enable_creation_date: true
+      enable_creation_date: false
+      timezone: America/Toronto
   - git-committers:
       repository: zeulewan/marswebsite
       branch: main
