--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,8 +48,8 @@ theme:
     - navigation.indexes
     - toc.follow
 plugins:
-  - git-revision-date-localized:
-      enable_creation_date: true
+  #- git-revision-date-localized:
+   #   enable_creation_date: true
       #timezone: America/Toronto
   - git-committers:
       repository: zeulewan/marswebsite
