uncomment revision date extension

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,9 +48,9 @@ theme:
     - navigation.indexes
     - toc.follow
 plugins:
-  #- git-revision-date-localized:
-   #   enable_creation_date: true
-      #timezone: America/Toronto
+  - git-revision-date-localized:
+      enable_creation_date: true
+      timezone: America/Toronto
   - git-committers:
       repository: zeulewan/marswebsite
       branch: main
