add actions extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
 		"vscode": {
 			"extensions": [
 				"ms-python.python",
-				"streetsidesoftware.code-spell-checker"
+				"streetsidesoftware.code-spell-checker",
+				"github.vscode-github-actions"
 			]
 		}
 	},
