update tag line

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: MARS
 
 site_url: https://marstmu.com/
-site_description: MARS Documentation.
+site_description: MARS Website.
 site_author: Zeul
 repo_url: https://github.com/zeulewan/marswebsite
 edit_uri: edit/main/docs/
