--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,13 +59,7 @@ plugins:
       authors: true
       blog_dir: . 
   - search
-  - rss:
-      match_path: blog/posts/.* 
-      date_from_meta:
-        as_creation: date
-      categories:
-        - categories
-        - tags 
+  - rss
 
 
 markdown_extensions:
