--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,7 @@ plugins:
       authors: true
   - search
   - rss:
-      match_path: docs/blog/posts/.* 
+      match_path: docs/blog/.* 
       date_from_meta:
         as_creation: date
       categories:
