--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,7 @@ plugins:
       authors: true
   - search
   - rss:
-      match_path: "blog/.*"
+      match_path: "status.md"
       date_from_meta:
         as_creation: date
       categories:
