--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,8 +59,25 @@ plugins:
       authors: true
   - search
   - rss:
-      match_path: "blog/.*"
-
+      abstract_chars_count: 160
+      abstract_delimiter: <!-- more -->
+      date_from_meta:
+        as_creation: "date"
+        as_update: false
+        datetime_format: "%Y-%m-%d %H:%M"
+        default_timezone: "Europe/Paris"
+        default_time: "22:00"
+      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_RSS, true]
+      image: https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Feed-icon.svg/128px-Feed-icon.svg.png
+      json_feed_enabled: true
+      match_path: ".*"
+      pretty_print: true
+      rss_feed_enabled: true
+      url_parameters:
+        utm_source: "documentation"
+        utm_medium: "RSS"
+        utm_campaign: "feed-syndication"
+      use_git: true
 
 
 markdown_extensions:
