--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,10 @@ plugins:
   - blog:
       authors: true
   - search
+  - rss:
+      match_path: blog/posts/.* 
+      date_from_meta:
+        as_creation: date
 
 markdown_extensions:
   - attr_list
