--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -14,3 +14,8 @@ authors:
     description: Helper
     avatar: https://avatars.githubusercontent.com/u/128150666
     url: https://github.com/Nathanael-e-h
+  Nathan:
+    name: Nathan L
+    description: PCB Lead
+    avatar: https://avatars.githubusercontent.com/u/75654981
+    url: https://github.com/Javezki
