--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - master 
       - main
+    paths:
+      - 'docs/Teams/submoduletest/**'
 permissions:
   contents: write
 jobs:
