--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -19,3 +19,8 @@ authors:
     description: PCB Lead
     avatar: https://avatars.githubusercontent.com/u/75654981
     url: https://github.com/Javezki
+  Newt:
+    name: Newt K
+    description: Web Ops
+    avatar: https://avatars.githubusercontent.com/u/150736361?
+    url: https://github.com/newtklocok
