add back credit

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,7 +83,7 @@ markdown_extensions:
   
   
 extra:
-  generator: false
+  generator: true
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/marstmu/marswebsite
