--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,35 +1,26 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-	"name": "marswebsite",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/base:jammy",
-	"features": {
-		"ghcr.io/devcontainers/features/python:1": {},
-	},
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"ms-python.python",
-				"streetsidesoftware.code-spell-checker",
-				"github.vscode-github-actions"
-			]
-		}
-	},
-	"postCreateCommand": "pip install mkdocs-material mkdocs-git-committers-plugin-2 mkdocs-git-revision-date-localized-plugin mkdocs-rss-plugin"
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "uname -a",
-
-	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+  "name": "marswebsite",
+  "image": "mcr.microsoft.com/devcontainers/base:jammy",
+  "features": {
+    "ghcr.io/devcontainers/features/python": {},
+    "ghcr.io/akhildevelops/devcontainer-features/pip": {
+      "packages": [
+        "mkdocs-material",
+        "mkdocs-git-committers-plugin-2",
+        "mkdocs-git-revision-date-localized-plugin",
+        "mkdocs-rss-plugin",
+        "mkdocs-table-reader-plugin",
+        "mkdocs-exclude"
+      ]
+    },
+    "ghcr.io/devcontainers-contrib/features/yamllint": {},
+    "ghcr.io/robinmordasiewicz/features/zzz-preinstall-extensions": {
+      "extensions": [
+        "ms-python.python",
+        "streetsidesoftware.code-spell-checker",
+        "github.vscode-github-actions",
+        "mechatroner.rainbow-csv"
+      ]
+    }
+  }
 }
