--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,9 +55,10 @@ plugins:
         - '.*/**'  # Excludes all directories and files starting with a dot
         - '.*'     # Excludes all top-level files starting with a dot
 
-  - git-revision-date-localized:
-      enable_creation_date: true
-      timezone: America/Toronto
+  # - git-revision-date-localized:
+  #     enable_creation_date: true
+  #     timezone: America/Toronto
+  
   # - git-committers:
   #     repository: marstmu/marswebsite
   #     branch: main
