--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,16 +20,15 @@ theme:
 
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
+      primary: custom
       scheme: default 
-      primary: black
-
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
 
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
-      primary: black
+      primary: custom
       scheme: slate
       toggle:
         icon: material/brightness-4
