--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,14 +12,16 @@
         "mkdocs-table-reader-plugin",
         "mkdocs-exclude"
       ]
-    },
-    "ghcr.io/devcontainers-contrib/features/yamllint": {},
-    "ghcr.io/robinmordasiewicz/features/zzz-preinstall-extensions": {
+    }
+  },
+  "customizations": {
+    "vscode": {
       "extensions": [
         "ms-python.python",
         "streetsidesoftware.code-spell-checker",
         "github.vscode-github-actions",
-        "mechatroner.rainbow-csv"
+        "mechatroner.rainbow-csv",
+        "MS-vsliveshare.vsliveshare"
       ]
     }
   }
