--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,10 +65,10 @@ plugins:
   - blog:
       authors: true
   - search
-  - rss:
-      match_path: blog/posts/.* 
-      date_from_meta:
-        as_creation: date
+  # - rss:
+  #     match_path: blog/posts/.* 
+  #     date_from_meta:
+  #       as_creation: date
 
 markdown_extensions:
   - attr_list
@@ -91,7 +91,7 @@ extra:
   generator: true
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/marstmu/marswebsite
+      link: https://github.com/marstmu/
     - icon: fontawesome/brands/instagram
       link: https://www.instagram.com/mars.tmu/
     - icon: fontawesome/brands/linkedin
