init ivan first blog post

--- a/docs/4in-Liquid-Rocket/blog/.authors.yml
+++ b/docs/4in-Liquid-Rocket/blog/.authors.yml
@@ -19,3 +19,8 @@ authors:
     description: Web Ops
     avatar: https://avatars.githubusercontent.com/u/150736361?
     url: https://github.com/newtklocok
+  Ivan:
+    name: Ivan Prushkovskyi
+    description: Composite Lead
+    avatar: https://avatars.githubusercontent.com/u/150736361?
+    url: https://github.com/GorrilaCheese
