--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,3 +106,14 @@ extra:
 extra_css:
   - css/extra.css
 
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
+markdown_extensions:
+  - pymdownx.caret
+  - pymdownx.mark
+  - pymdownx.tilde
+
+  - pymdownx.arithmatex:
+      generic: true
