update devcontainer configuration and enhance avionics documentation with additional links

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,8 @@
         "streetsidesoftware.code-spell-checker",
         "github.vscode-github-actions",
         "mechatroner.rainbow-csv",
-        "MS-vsliveshare.vsliveshare"
+        "MS-vsliveshare.vsliveshare",
+        "GitHub.vscode-pull-request-github"
       ]
     }
   }
