Remove unused extra CSS file and comment out reference in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,8 +101,8 @@ extra:
     - icon: custom/notion
       link: https://marstmu.notion.site/MARS-Notion-1912fcb069e2804d92e6dc49248b4dbb
 
-extra_css:
-  - css/extra.css
+# extra_css:
+#   - css/extra.css
 
 extra_javascript:
   - javascripts/mathjax.js
